<resources>
    <string name="home_menu">Home</string>
    <string name="profile_menu">My Profile</string>
    <string name="class_menu">Class</string>
    <string name="buymembership_menu">Buy Membership</string>
    <string name="schedules_menu">My Schedules</string>
    <string name="mymembership_menu">My Membership</string>
    <string name="cart_menu">My Cart</string>
    <string name="about_menu">About</string>
    <string name="logout_menu">Log Out</string>
    <string name="app_name">FitnessPark Member App</string>

    <string name="OpenDrawer">Open Navigation Drawer</string>
    <string name="CloseDrawer">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>