<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/homeMenu"
          android:title="@string/home_menu"
          android:icon="@drawable/home_icon"
          android:iconTint="@color/primary_color"
          android:textColor="@color/primary_color"/>

    <item android:id="@+id/profileMenu"
          android:title="@string/profile_menu"
          android:icon="@drawable/profile_icon"
          android:iconTint="@color/primary_color"
          android:textColor="@color/primary_color"/>

    <item android:id="@+id/classMenu"
          android:title="@string/class_menu"
          android:icon="@drawable/group_icon"
          android:iconTint="@color/primary_color"
          android:textColor="@color/primary_color"/>

    <item android:id="@+id/buymembershipMenu"
          android:title="@string/buymembership_menu"
          android:icon="@drawable/buymembership_icon"
          android:iconTint="@color/primary_color"
          android:textColor="@color/primary_color"/>

    <item android:id="@+id/schedulesMenu"
          android:title="@string/schedules_menu"
          android:icon="@drawable/calender_icon"
          android:iconTint="@color/primary_color"
          android:textColor="@color/primary_color"/>

    <item android:id="@+id/mymembershipMenu"
          android:title="@string/mymembership_menu"
          android:icon="@drawable/mymembership_icon"
          android:iconTint="@color/primary_color"
          android:textColor="@color/primary_color"/>

    <item android:id="@+id/cartMenu"
          android:title="@string/cart_menu"
          android:icon="@drawable/cart_icon"
          android:iconTint="@color/primary_color"
          android:textColor="@color/primary_color"/>

    <item android:id="@+id/aboutMenu"
          android:title="@string/about_menu"
          android:icon="@drawable/info_icon"
          android:iconTint="@color/primary_color"
          android:textColor="@color/primary_color"/>

    <item android:id="@+id/logoutMenu"
          android:title="@string/logout_menu"
          android:icon="@drawable/logout_icon"
          android:iconTint="@color/primary_color"
          android:textColor="@color/primary_color"/>
</menu>